css/default/racustom.css
/* ... */
#content-wrapper h2 {
    padding-top: 1em
}

#content-wrapper .thumbnail {
    width: 10%;
    float: left;
}

#content-right {
    display: block;
    text-align: left;
    margin-top: 1em;
}

.navright .left {
    margin-top: -12px
}

.overview p {
    margin-top: 0;
    margin-bottom: 12px;
}

.overview a {
    color: #c45414 !important
}

#content-right table tr td {
    padding-right: 1em
}

.col4 {
    padding-right: 1em
}

.moreInfo a {
    float: left
}

/* ===[ CONTAINER LISTS for FINDING AIDS ]=== */

#content-wrapper .table {
    margin: 1%
}

.dscSeries {
    float: left;
    width: 100%;
}

.dscSubseries {
    float: left;
    width: 99%;
    padding-left: 1%;
}

.seriesTitle {
    background-color: #ddd;
    padding: 8px 4px;
    font-size: 1.25em;
    margin: 10px 0px;
    font-weight: bold;
    float: left;
    width: 100%;
}

.instances {
    width: 35%;
    float: left;
}

.instance {
    width: 100%;
    float: left;
}

.inventoryHeader {
    margin-bottom: .5em;
    float: right;
    width: 99%;
}

.inventoryHeaderTitle {
    font-weight: bold;
    padding-top: .5em;
    text-align: left;
    width: 40%;
    float: left;
}

.digital .inventoryHeaderTitle {
    width: 55%
}

.inventoryHeaderFormat, .inventoryHeaderContainers, .inventoryHeaderNotes, .inventoryHeaderBookbag {
    font-weight: bold;
    padding-top: .5em;
    text-align: left;
}

.inventoryHeaderFormat {
    width: 10%;
    float: left;
}

.inventoryHeaderContainers {
    width: 35%;
    float: left;
}

.inventoryHeaderNotes {
    width: 14%;
    float: left;
}

.inventoryHeaderBookbag {
    padding-right: 1%;
    float: right;
}

.moreLess a {
    text-decoration: none !important;
    font-weight: bold;
    color: #c45414 !important;
}

.inventoryTitle {
    font-weight: bold;
    background-color: #000;
    color: #fff;
    padding: 4px 2px;
    margin-bottom: .5em;
    float: left;
    width: 100%;
}

.file:nth-of-type(even), .item:nth-of-type(even) {
    background-color: #eee !important
}

.file, .item {
    float: left;
    width: 100%;
    padding: .5em 0 .5em 0;
}

.file.active, .item.active, .active .item, .active .file {
    color: #fff;
    background-color: #999 !important;
    border-left: .5em solid #c45414;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    position: relative;
    z-index: 2;
}

.active .item, .active .file {
    background-color: #999 !important
}

.file.active .subhit, .item.active .subhit {
    color: #fff !important
}

.component-title, .containers, .moreInfo {
    float: left;
    display: inline-block;
    vertical-align: middle;
}

.component-title {
    width: 38%;
    padding: 0 1% 0 1%;
}

.digital .component-title {
    width: 53%
}

.instance .container {
    float: left;
    padding-right: 1em;
}

.moreInfo {
    width: 16%
}

.moreInfo .hit {
    padding-left: 2px
}

.containerWrapper {
    float: left;
    width: 59%;
}

.inventoryBookbag {
    text-align: center;
    float: right;
    font-size: 1em;
    line-height: 2em;
    padding-right: 5px;
}

.dialog_dsc, .restrict_dsc {
    width: 100%;
    float: left;
}

.restrict_dsc {
    margin-top: .5em
}

/* ===[ LIBRARY RECORDS ]=== */

.modsInfo h3 {
    margin: 0;
    padding: .25em .25em 1em .25em;
    background-color: #ccc !important;
    border: red;
}

/* ===[ DIGITAL OBJECT TABLES ]=== */

.daoTable {
    text-align: center;
    border: 1px solid #666;
    border-radius: 4px;
    margin-top: 1em;
}

.daoTable div {
    float:left;
}

.daoTable > div {
    min-height:2em;
}

.daoTable .filename {
    width:60%;
    overflow: hidden;
    text-overflow: ellipsis;
}

.daoTable .format {
    width:25%
}

.daoTable .size {
    width: 15%
}

.daoTable .row {
    width: 100%;
    padding-top:.5em;
}

.daoTable .row:nth-of-type(odd) {
    background: #fff
}

.daoTable .row:nth-of-type(even) {
    background: #eee
}

.daoTable .row:hover {
    background:#ddd;
}

.daoTable .row:hover a div {
    color:#c45414;
    text-decoration:underline;
}

.daoTable .row div {
    color: #000;
}

#content-wrapper .daoTable a {
    color: #c45414
}

.daoTable > .head {
    background: #333;
    width: 100%;
    padding-top:.25em;
}

.daoTable > .head > div {
    color: #eee;
    font-weight: normal;
}

#docHits .daoTable {
    float: right;
    width: 86%;
}

#docHits .subdocument .daoTable {
    width: 100%
}

#content-wrapper .daoTable {
    float: left;
    width: 88%;
    margin-left: 1%;
}

#content-wrapper.digital .daoTable {
    width: 88%
}

.daoTable img {
    height: 1em
}

/* ===[ DIGITAL OBJECT DETAIL PAGES ]=== */

#bookmarkMenu {
    width: 16em;
    height: 2em;
    opacity: 0;
    margin-bottom: 1em;
}

#bookmarkMenu .button {
    float: right;
    margin: 0 0 0 1em;
}

#bookmarkMenu .button .link {
    width: 56px;
    height: 20px;
    padding: 1px;
    font-size: 13px;
    line-height: 13px;
}

#bookmarkMenu img {
    height: 1em;
    vertical-align: middle;
}

.digital-thumbnail {
    float: left;
    margin-right: 2%;
    max-width: 300px;
    width: 48%;
}

.digital-thumbnail img.view {
    cursor: pointer
}

.description {
    width: 48%;
    float: left;
}

#content-wrapper .thumbnailButtons a {
    text-decoration: none;
    color: #333;
}

.thumbnailButtons {
    text-align: center
}

.thumbnailButtons img {
    height: 20px;
    vertical-align: middle;
}

.thumbnailButtons .btn {
    margin: 1em .5em
}

iframe {
    background-image: url("images/ajax-loader.gif");
    background-repeat: no-repeat;
    background-position: 50% 50%;
    width:99%;
    height:100%;
}

.description .creator p {
    margin-bottom: 0
}

.description .extent {
    margin-top: 1em
}

/* ===[ MODAL DIALOGS ]=== */

.overlay {
    display: none;
    z-index: 10000;
    background-color: #fff;
    width: 410px;
    min-height: 200px;
    border: 1px solid #666;
    padding: 20px;
}
/* ... */

